# pscontroller-rs

./: .gitignore  Cargo.toml  LICENSE-MIT.txt  README.md  README.rd  spidev_psxpad.c  start.sh  test
.github/workflows/: check.yml  fmt.yml
examples/: baton.rs  console.rs  dualshock.rs  guitarhero.rs  jogcon.rs  mouse.rs  playstation.rs  scanner.rs
research/: README.md
src/: baton.rs  classic.rs  dualshock.rs  guitarhero.rs  guncon.rs  jogcon.rs  lib.rs  mouse.rs  negcon.rs
